Corrected some overflow issues.
The userinfo block will now clip any text that goes too long (i.e. a
URL that's too long or a display name that is very long and has no
spaces).  The content area will do the same thing in case of a post
which contains long strings of unbreakable text, but that's a bit
sloppier of CSS to make it work.

What I'm saying is, I'm no CSS expert, and this entire stylesheet could
probably benefit from someone better at it giving it a once-over.

--- a/gnu_social_widget.css
+++ b/gnu_social_widget.css
@@ -47,6 +47,7 @@
     width:284px;
     margin:4px;
     float:left;
+    overflow:hidden;
 }
 
 .gsw_userdisplayname
@@ -97,6 +98,7 @@
     clear:both;
     overflow-y:auto;
     max-height:400px;
+    max-width:400px;
 }
 
 .gsw_contentblock > hr
